# DalleDisplayer

./: .gitignore  README.md  __init__.py  dalle.py  openBoxStarter.bash  pyproject.toml  requirements.txt  transcribe.py
src/: main.py
src/decorators/: decorators.py
src/depdencyInjection/: Container.py
src/imageProviders/: DalleProvider.py  ImageProvider.py
src/repoManager/: DirectoryIterator.py  Models.py  RepoManager.py  utils.py
src/speechRecognition/: GoogleSpeachRecognizer.py  SpeechRegonizer.py
src/ui/: ImageViewer.py  MainWindow.py  QApplicationManager.py  UIApplication.py  UIOrchestrator.py  rootWindow.py
src/ui/dialogs/: ErrorMessage.py  LoadingPopup.py  RecorderDialog.py
src/ui/widgets/: ImageViewer.py  MainWindow.py
src/ui/widgets/common/: QLine.py
src/ui/widgets/gallery/: GalleryDisplay.py  GalleryPage.py
src/ui/widgets/home/: HomePage.py  ImageGenerator.py  ImageMeta.py  ImageViewer.py
src/utils/: algoUtils.py  dateUtils.py  enums.py  loggingUtils.py  pageUtils.py  pathingUtils.py  qtUtils.py
test/: conftest.py  constantsTestUtil.py  main.py  utils_for_test.py
test/dependencyInjection/: containerTestUtil.py
test/repoManager/: test_DirectoryIterator.py  test_RepoManager.py  test_utils.py
test/ui/: conftest.py  test_UIOrchestrator.py
test/ui/widgets/: test_MainWindow.py
test/ui/widgets/gallery/: test_GalleryPage.py
test/utils/: dependencyInjectionUtils.py  test_algoUtils.py  test_pathingUtils.py
testResources/configs/: test_config.yml
tools/: openBoxStarter.bash
