[project]
name="PAIID"
version = "1.0.0"
authors = [
  { name="Cory Bond", email="cb.cobond@gmail.com" },
]
description = "A AI image generator for raspberry pi"
readme = "README.md"
requires-python = "==3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dependencies  = [
  "dependency_injector",
  "qdarkstyle",
  "requests",
  "SpeechRecognition"
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-env",
    "pytest-timeout",
    "pytest-qt"
]


[project.urls]
Homepage = "https://github.com/CoryBond/PAIID"


[tool.pytest.ini_options]
pythonpath = [
  "src",
  "test"
]
qt_api="pyqt5"
env = [
    # Fixes qt not working in test environmnet. See : https://stackoverflow.com/questions/68036484/qt-qpa-plugin-could-not-load-the-qt-platform-plugin-xcb-in-even-though-it
    "QT_QPA_PLATFORM = offscreen"
]