[project]
name="PAIID"
version = "2.1.0"
authors = [
  { name="Cory Bond", email="cb.cobond@gmail.com" },
]
description = "A AI image generator for raspberry pi"
readme = "README.md"
requires-python = "==3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dependencies  = [
  "dependency_injector",
  "qdarkstyle",
  "requests",
  "SpeechRecognition",
  "PyYAML"
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-env",
    "pytest-timeout",
    "pytest-qt",
    "pyfakefs"
]


[project.urls]
Homepage = "https://github.com/CoryBond/PAIID"


[tool.pytest.ini_options]
pythonpath = [
  "src",
  "test"
]
qt_api="pyqt5"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
env = [
    # Fixes qt not working in test environmnet. See : https://stackoverflow.com/questions/68036484/qt-qpa-plugin-could-not-load-the-qt-platform-plugin-xcb-in-even-though-it
    "QT_QPA_PLATFORM = offscreen"
]